k8s/apps/tailscale/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  namespace: tailscale-networking
spec:
  type: ExternalName
  externalName: longhorn-frontend.longhorn-storage.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anso
  namespace: tailscale-networking
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /longhorn
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
