k8s/apps/tailscale/longhorn.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-storage
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: longhorn
      port:
        number: 80
  tls:
    - hosts:
        - longhorn
